# ArgentumCoop

./: .gitignore  .gitmodules  ApocalypseArgentum.code-workspace  ArgentumSurvival.sln  Multiplayer_Test.gd  README.md  config.gd  export_presets.cfg  godot.code-snippets  main.gd  overworld.gd  project.godot  world.gd  zconfig.gd
Rust/: Cargo.toml
assets/: apocalypse-7021371.jpg.import
cpp/: SConstruct.py  godot.code-snippets
resource_instances/: new_tile.tres
resources/: testinv.tres  tile_set.tres
rust/: Cargo.toml  godot.code-snippets
rust/src/: argentum_tilemap.rs  formation_generator.rs  fractured_continent_generator.rs  fractured_formation_generator.rs  game_saver.rs  lib.rs  matrix.rs  rust_tilemap.rs  safe_vec.rs  tile.rs  tiling.rs  uns_vec.rs  utils.rs  world_matrix.rs
rust/src/beings/: basic_race.rs  being_builder.rs  diet.rs  mod.rs  spawn_weights_matrix.rs  sprite_data.rs
rust/src/formation_generation/: fractured_continent_generator.rs  mod.rs
rust/src/formation_generator/: fractured_continent_generator.rs  mod.rs
rust/src/rust_tilemap/: mod.rs  world_matrix.rs
rust/src/utils/: matrix.rs  mod.rs  safe_vec.rs  uns_vec.rs
scenes/: ArgentumTileMap.gd  ArgentumTilemap.gd  TileMap.gd  animated_body_portion.tscn  being.tscn  cha4ED6.tmp  character.tscn  character_body_2d.tscn  character_controller.tscn  character_creation_lobby.tscn  game_world.tscn  mai43C5.tmp  mai7FA9.tmp  mai8031.tmp  maiAF6F.tmp  maiCC97.tmp  maiCE7E.tmp  maiDE1E.tmp  maiF471.tmp  main.tscn  multiplayer_test.tscn  overworld.tscn  player.tscn  static_body_2d.tscn  test_bad.tscn  world.tscn
scripts/: attack.gd  (+23 more)
(+513 files in other folders)
