[package]
name = "argentum_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}
gxhash = "=3.4.1"
#num = "0.4"
#ranged-num = "0.1"
#typenum = "1.17"
enum-primitive-derive = "*"
num-traits = "*"
strum = "0.26"
strum_macros = "0.26"
rand = "*"
rand_distr = "*"
noise = "0.9"
rand_seeder = "*"
rand_pcg = "*"
[lib]
crate-type = ["cdylib"]

[dependencies.fastnoise-lite]
version = "*"
features = ["f64"]